[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twilio-audio-downloader-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for downloading audio files from Twilio with authentication"
requires-python = ">=3.10"
authors = [
    { name = "Twilio Audio Downloader Team" }
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.3.4",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
twilio-audio-downloader-mcp = "twilio_audio_downloader_mcp.server:main"

[tool.uv]
dev-dependencies = []
